--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,5 @@ Process Injection Gear
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33.3"
+clap = { version="2.33.3", features=["yaml"]}
 nix = "0.19.1"
