あとはエンディアン直せば動くはず

--- a/src/options.yml
+++ b/src/options.yml
@@ -24,3 +24,8 @@ args:
         help: "target process id"
         takes_value: true
         required: true
+    - code:
+        help: "inject code file"
+        takes_value: true
+        short: c
+        long: code
