--- a/src/options.yml
+++ b/src/options.yml
@@ -24,6 +24,10 @@ args:
         help: "target process id"
         takes_value: true
         required: true
+    - verbose:
+        help: "verbose"
+        short: v
+        long: verbose
     - code:
         help: "inject code file"
         takes_value: true
